--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/app.js"></script>
+    <script defer src="/new.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Cat Cafe</title>
 </head>
+
 <body>
-    <div class="contenedor">
-    <h1>CAT CAFE</h1>
-    <p>Ingresa a tu cuenta y coordina con nosotros una linda experiencia rodeado de gatitos.</p>
 
-    <form name=form action="ingresarsesion">
+    <h1>Cat Cafe</h1>
 
-        <p>Usuario:    <input type=text name=login> 
-        <p>Contraseña: <input type=password name=password> 
-        <input onclick=go() type=button value=Acceder>
-        
+    <main>
+        <form>
+            <h2 class="h3 mb-3 fw-normal">Ingresa a tu cuenta</h2>
+
+            <div class="form-floating my-3">
+                <input type="email" class="form-control" id="emailAddress" placeholder="nombre@mail.com">
+                <label for="emailAddress">Dirección de correo</label>
+            </div>
+            <div class="form-floating my-3">
+                <input type="password" class="form-control" id="password" placeholder="Contraseña">
+                <label for="password">Contraseña</label>
+            </div>
+
+            <button class="w-100 btn btn-lg btn-primary my-1" id="btnLogin" type="submit">Iniciar sesión</button>
         </form>
 
-        <div class="contenedorTarjetas catd-group">
-            
-        </div>
+<div id="card-container"></div>
 
-    </div>
+    </main>
+
+
+    <script src="./new.js"></script>
+
 </body>
+
 </html>
