--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/new.js"></script>
+    <script defer src="/newww.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Cat Cafe</title>
 </head>
